--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,113 @@
-.App {
-  text-align: center;
+:root {
+  --yellow: #ffc600;
+  --black: #272727;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 900;
+  font-size: 10px;
+  color: var(--black);
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  background-image: url("./logo.svg"),
+    linear-gradient(110deg, #004983, #62be5e);
+  background-size: 340px, auto;
+  min-height: calc(100vh - 100px);
+  margin: 5em 15em;
+  background-position: fixed;
+  letter-spacing: -1px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 5px 0;
+}
+
+.brand-logo {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  padding-bottom: 4em;
+}
+
+/* .item {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid rgba(0, 0, 0, 0.03);
+  border-radius: 3px;
+  font-size: 35px;
+  background-color: var(--yellow);
+} */
+
+/* .item p {
+  margin: 0 0 5px 0;
+} */
+
+header,
+nav,
+main,
+aside,
+footer {
+  background: #eaeaea;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 20px;
+  color: var(--black);
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 150px 50px 500px 300px 300px 150px;
+  grid-gap: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.grid > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid var(--yellow);
+  border-radius: 3px;
+}
+
+header, nav, main, footer {
+  grid-column: 1 / 3;
+}
+
+.sidebar-left {
+  grid-column: 1 / 2;
+}
+
+.sidebar-right {
+  grid-column: 2 / 3;
+}
+
+@media all and (max-width: 700px) {
+  nav,
+  aside {
+    grid-column: 1 / 3;
   }
 }
+
+/* p {
+  font-size: 30px;
+  border-bottom: 10px solid #eaeaea;
+  color: var(--black);
+} */
