--- a/src/App.css
+++ b/src/App.css
@@ -99,9 +99,14 @@ header, nav, main, footer {
   grid-column: 2 / 3;
 }
 
-@media all and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
   nav,
   aside {
+    grid-column: 1 / 3;
+  }
+
+  .sidebar-left,
+  .sidebar-right {
     grid-column: 1 / 3;
   }
 }
