--- a/src/App.css
+++ b/src/App.css
@@ -38,30 +38,17 @@ h6 {
   margin: 0 0 5px 0;
 }
 
-.brand-logo {
+/* .brand-logo {
   display: flex;
   align-items: center;
   padding-bottom: 4em;
-}
-
-/* .item {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  border: 5px solid rgba(0, 0, 0, 0.03);
-  border-radius: 3px;
-  font-size: 35px;
-  background-color: var(--yellow);
-} */
-
-/* .item p {
-  margin: 0 0 5px 0;
 } */
 
 header,
 nav,
 main,
 aside,
+section,
 footer {
   background: #eaeaea;
   display: flex;
@@ -70,44 +57,35 @@ footer {
   font-size: 20px;
   color: var(--black);
   padding: 1em;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 150px 50px 500px 300px 300px 150px;
-  grid-gap: 1em;
-}
-
-.grid > * {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 5px solid var(--yellow);
+  border: 5px solid #BADA55;
   border-radius: 3px;
 }
 
+.grid-container {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1.5fr 1fr 5fr 4fr 3.5fr 1.5fr;
+  align-content: stretch;
+}
+
+/* .grid-container > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
 header, nav, main, footer {
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
 }
 
-.sidebar-left {
-  grid-column: 1 / 2;
-}
-
-.sidebar-right {
-  grid-column: 2 / 3;
+aside {
+  align-content: stretch;
 }
 
 @media all and (max-width: 700px) {
   nav,
   aside {
-    grid-column: 1 / 3;
+    grid-column: span 1;
   }
 }
-
-/* p {
-  font-size: 30px;
-  border-bottom: 10px solid #eaeaea;
-  color: var(--black);
-} */
