--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,12 @@ header, nav, main, footer {
   grid-column: 2 / 3;
 }
 
+@media screen and (min-width: 1900px) {
+  body {
+    margin: 5em 20%;
+  }
+}
+
 @media screen and (max-width: 1000px) {
 
   body {
