--- a/src/App.css
+++ b/src/App.css
@@ -83,30 +83,20 @@ aside {
   align-content: stretch;
 }
 
+/* Tablet screen-size modification */
 @media screen and (max-width: 1000px) {
 
-  body {
-    margin: 5em 5%;
-  }
-
-  .grid {
-    grid-template-columns: 0 1fr 0;
-    grid-template-rows: 150px 50px 500px 300px 300px 150px;
-  }
-
-  nav,
-  aside {
-    grid-column: span 1;
-  }
-
-  .sidebar-left,
-  .sidebar-right {
-    grid-column: 1 / 3;
-  }
+body {
+  margin: 5em 5%;
 }
 
-/* p {
-  font-size: 30px;
-  border-bottom: 10px solid #eaeaea;
-  color: var(--black);
-} */
+.grid {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1.5fr 1fr 5fr 4fr 3.5fr 1.5fr;
+}
+
+.sidebar-left,
+.sidebar-right {
+  grid-column: 1 / 3;
+  }
+}
