--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
     linear-gradient(110deg, #004983, #62be5e);
   background-size: 340px, auto;
   min-height: calc(100vh - 100px);
+  /* min-width: 100vw; */
   margin: 5em 15em;
   background-position: fixed;
   letter-spacing: -1px;
