--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@ aside {
   align-content: stretch;
 }
 
+/* 4k screen-size modification */
 @media screen and (min-width: 1900px) {
   body {
     margin: 5em 20%;
